[project]
name = "mcp-gym"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Tom Pollak", email = "tompollak1000@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
mcp-gym = "mcp_gym:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
