[project]
name = "mcp-gym"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Tom Pollak", email = "tompollak1000@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "gymnasium>=1.1.1",
    "matplotlib>=3.10.1",
    "mcp>=1.5.0",
    "numpy>=2.2.4",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
]

[project.scripts]
mcp-gym = "mcp_gym:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "jupyterlab>=4.3.6",
    "jupyterlab-vim>=4.1.4",
]
