[project]
name = "mcp-gym"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Tom Pollak", email = "tompollak1000@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "einx[torch]>=0.3.0",
    "gymnasium[box2d,classic-control]>=1.1.1",
    "jaxtyping>=0.3.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.1",
    "mcp>=1.5.0",
    "numpy>=2.2.4",
    "swig>=4.3.0",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
]

[project.scripts]
mcp-gym = "mcp_gym:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "jupyterlab>=4.3.6",
    "jupyterlab-vim>=4.1.4",
    "moviepy>=2.1.2",
]
